2006-11-21  Daniel Elstner  <daniel.kitta@gmail.com>

	* ui/mainwindow.glade (menuitem_about): Replace the stock item
	reference "regexxer-about" with "gtk-about", now that the latter
	has been added to GTK+.
	* src/main.cc (stock_icon_about): Remove.
	(regexxer_stock_items): Remove "regexxer-about" stock item.
	* pixmaps/Makefile.am (stockimages): Remove stock_menu_about.png
	from list.
	* pixmaps/stock_menu_about.png: Remove file.

2006-11-21  Daniel Elstner  <daniel.kitta@gmail.com>

	* src/filetree.cc (FileTree::on_style_changed): Use the proper
	stock images "file" and "directory" instead of abusing "new" and
	"open", respectively.  These new items have been available since
	GTK+ 2.6.

2006-11-13  Daniel Elstner  <daniel.kitta@gmail.com>

	* src/stringutils.cc (parse_control_char, Util::convert_to_ascii):
	Avoid bitwise operations with possibly signed char values.  Make
	use of explicit casts and unsigned integer literals instead.

2006-11-13  Daniel Elstner  <daniel.kitta@gmail.com>

	* AUTHORS: Change my mail address.

2006-11-13  Daniel Elstner  <daniel.kitta@gmail.com>

	* macros/cxx.m4 (REGEXXER_LINK_EXPORT_DYNAMIC): New macro to
	check for support of the --export-dynamic linker flag.
	* configure.ac: Use the new REGEXXER_LINK_EXPORT_DYNAMIC macro
	to fill in the substituted variable REGEXXER_EXPORT_DYNAMIC.
	* src/Makefile.am (regexxer_LDFLAGS): Substitute the value of
	$(REGEXXER_EXPORT_DYNAMIC) since libglade no longer passes the
	linker flag -Wl,--export-dynamic by default.

2006-10-05  Sven Herzberg  <herzi@gnome-de.org>

	* autogen.sh: use --copy on intltoolize, so modifying
	po/Makefile.in.in doesn't fail for the missing permissions

2005-12-13  Murray Cumming  <murrayc@murrayc.com>

	* autogen.sh: Use --force on intltoolize, because it was 
	complaining about an old Makefile.in.in.
	* configure.ac:
	* src/Makefile.am: Change PKG_CFLAGS/LIBS to REGEXXER_CFLAGS/LIBS 
	because the latest autoconf (or something) complains that PKG_CFLAGS 