@@ -17,9 +17,8 @@
 ## along with this program; if not, write to the Free Software
 ## Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
-
-pixmapdir = $(datadir)/pixmaps
-dist_pixmap_DATA = regexxer.png
+icon48dir = $(datadir)/icons/hicolor/48x48/apps
+dist_icon48_DATA = regexxer.png
 
 stockimages = stock_save_all_16.png stock_save_all_24.png
 dist_noinst_DATA = $(stockimages)
@@ -39,4 +38,3 @@ stockimages.h: $(stockimages)
 	done; \
 	echo " $(gdk_pixbuf_csource_command) $$build_list >$@"; \
 	$(gdk_pixbuf_csource_command) $$build_list >$@
-
